added api gateway

--- a/ui/chat-test.html
+++ b/ui/chat-test.html
@@ -233,7 +233,7 @@
 
         // Configuration
         const CONFIG = {
-            apiEndpoint: 'https://3lv4j7bzukqk74fohotelckqka0neuuz.lambda-url.us-east-1.on.aws/',  // Orchestrator Lambda Function URL
+            apiEndpoint: 'https://o5ha32swh7.execute-api.us-east-1.amazonaws.com/prod/chat',  // API Gateway endpoint (hybrid SQL + semantic search)
             sessionId: generateSessionId()
         };
 
